Take advantage of Java 17 features